--- a/styles.css
+++ b/styles.css
@@ -9,9 +9,19 @@
   font-size: 30px;
 } */
 
-div{
+/* .relative {
+  width: 400px;
+  height: 200px;
   border: 3px solid green;
-  position: fixed;
-  bottom: 0;
-  right: 0;
+  position: relative;
 }
+.absolute {
+  width: 200px;
+  height: 100px;
+  border: 1px solid red;
+  position: absolute;
+  left: 0;
+  top: 80px;
+
+} */
+
